[gd_scene load_steps=6 format=3 uid="uid://cmvmuakbaow42"]

[ext_resource type="Texture2D" uid="uid://dwmg6hgoha5d5" path="res://assets/ui/ability_bow_normal.png" id="1_071xn"]
[ext_resource type="Texture2D" uid="uid://cdcw4d0dl33qy" path="res://assets/ui/ability_bow_press.png" id="2_1cmj8"]
[ext_resource type="Texture2D" uid="uid://b2pvsb5deuslm" path="res://assets/ui/ability_bow_hover.png" id="3_ivd0o"]
[ext_resource type="Script" uid="uid://di741767cd0fp" path="res://scenes/ui/button_ability.gd" id="4_1cmj8"]
[ext_resource type="Theme" uid="uid://cmc345t3y1agn" path="res://assets/theme_ui.tres" id="5_ivd0o"]

[node name="ButtonAbility" type="TextureButton"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -58.0
offset_right = 116.0
offset_bottom = 58.0
grow_vertical = 2
texture_normal = ExtResource("1_071xn")
texture_pressed = ExtResource("2_1cmj8")
texture_hover = ExtResource("3_ivd0o")
script = ExtResource("4_1cmj8")

[node name="LabelDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 288.0
grow_vertical = 0
theme = ExtResource("5_ivd0o")
text = "Test Description."
autowrap_mode = 3

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
